# benchtable

./: Cargo.toml  Rocket.toml  data.json
src/: comparison.rs  graphs.rs  main.rs
static/: style.css  table.js
templates/: index.html  index.html.tera
