[package]
name = "benchtable"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rusqlite = { version = "*", features=["bundled"] }
serde = "*"
serde_json = "*"
markup = "*"
#rocket = "*"
#rocket_contrib = { version = "*", features=["sqlite_pool", "tera_templates"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "async"
features=["sqlite_pool", "compression"]