[package]
name = "benchtable"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rusqlite = { version = "*", features=["bundled"] }
serde = { version = "*", features=["derive"] }
serde_json = "*"
markup = "*"
actix-web = "*"
actix-files = "*"
r2d2 = "*"
r2d2_sqlite = "*"
futures = "*"