[package]
name = "benchtable"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rusqlite = { version = "*", features=["bundled"] }
r2d2 = "*"
r2d2_sqlite = "*"
serde = "*"
serde_json = "*"
markup = "*"
tower-web = "*"
tokio = "*"
http = "*"
flate2 = "*"
toml = "*"